--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,7 @@
 {
   "Тестовый перевод": "Тестовый перевод",
   "Язык": "English",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Что то пошло не так":"Что то пошло не так",
+  "Перезагрузить страницу":"Перезагрузить страницу"
 }
