--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "Язык": "English",
   "Страница не найдена": "Page Not Found",
   "Что то пошло не так":"Something went wrong",
-  "Перезагрузить страницу":"Reload page"
+  "Перезагрузить страницу":"Reload page",
+  "Короткая версия":"En"
 }
