--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,6 @@
   "Язык": "English",
   "Страница не найдена": "Страница не найдена",
   "Что то пошло не так":"Что то пошло не так",
-  "Перезагрузить страницу":"Перезагрузить страницу"
+  "Перезагрузить страницу":"Перезагрузить страницу",
+  "Короткая версия":"Ru"
 }
