add first features, add Input, add Login modal, login form, add stories

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,10 @@
 {
   "Тестовый перевод": "Тестовый перевод",
-  "Язык": "English",
+  "Язык": "Русский",
   "Страница не найдена": "Страница не найдена",
   "Что то пошло не так":"Что то пошло не так",
   "Перезагрузить страницу":"Перезагрузить страницу",
-  "Короткая версия":"Ru"
+  "Короткая версия":"Ru",
+  "Имя пользователя":"Имя пользователя",
+  "Пароль":"Пароль"
 }
