--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,8 @@
   "Перезагрузить страницу":"Перезагрузить страницу",
   "Короткая версия":"Ru",
   "Имя пользователя":"Имя пользователя",
-  "Пароль":"Пароль"
+  "Пароль":"Пароль",
+  "Неправильно введены логин или пароль": "Неправильно введенеы логин или пароль",
+  "Форма авторизации":"Форма авторизации",
+  "Выйти":"Выйти"
 }
